<resources>
    <string name="app_name">Weather App</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="z_number">Z-Number: Z23481800</string>
    <string name="name">Giovanni Gonzalez</string>
    <string name="HomePage_Text">Home Page!</string>
    <string name="info_Text">Here you will be able to check the weather by using ZIP-code, City name ot GPS (Geolocation)</string>
    <string name="placeholder">Enter City or ZIP ...</string>
    <string name="weather_title">Weather for :</string>
    <string name="country">Country Name</string>
    <string name="temp">Temperature</string>
    <string name="MIN">Min Temp</string>
    <string name="MAX">Max Temp</string>
    <string name="humidity"> Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="description">Description</string>
    <string name="Map">To Map!</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="Weather_element">Weather Elements</string>
    <string name="Weather_data">Data</string>
    <string name="Info_For_Speech">Click on the Results on Navbar to hear the Weather results</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>