<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weather_context">


    <TextView
        android:id="@+id/weather_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="365dp"
        android:layout_margin="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <!-- Table Data -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">

            <TextView

                android:layout_width="166dp"
                android:layout_height="match_parent"
                android:layout_weight="0"

                android:padding="10sp"
                android:text="@string/Weather_element"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView

                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="10sp"
                android:text="@string/Weather_data"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/pressure"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/pressure_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/temp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/temperature_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </TableRow>

        <TableRow android:layout_height="98dp">

            <TextView
                android:id="@+id/minTemp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/MIN"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/minTemp_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </TableRow>

        <TableRow android:layout_height="98dp">

            <TextView
                android:id="@+id/maxTemp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/MAX"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/maxTemp_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/humidity_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/longi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/lon"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/longi_Value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/latitu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/lat"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/latitu_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/sunrise"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/sunrise_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/sunset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/sunset"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/sunset_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/studentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z_number"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/student_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/studentID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/student_Name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/studentID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Info_For_Speech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_Title" />

</androidx.constraintlayout.widget.ConstraintLayout>