<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/weather_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/weather_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="339dp"
        android:layout_height="408dp"
        android:layout_margin="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="124dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/map_BTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_Title">

        <!-- Table Data -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">

            <TextView

                android:layout_width="166dp"
                android:layout_height="match_parent"
                android:layout_weight="0"

                android:padding="10sp"
                android:text="@string/Weather_element"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView

                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="10sp"
                android:text="@string/Weather_data"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/country"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/country_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/feel_like"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/feels_like"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/feelsLike_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </TableRow>

        <TableRow android:layout_height="98dp">

            <TextView
                android:id="@+id/minTemp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/MIN"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/minTemp_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </TableRow>

        <TableRow android:layout_height="98dp">

            <TextView
                android:id="@+id/maxTemp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/MAX"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/maxTemp_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/humidity_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/pressure"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/pressure_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/desc_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/sunrise"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/sunrise_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/sunset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/sunset"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/sunset_Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/map_BTN"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/Map"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>